2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Fixed previous change.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: More work.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem trivial things.cs, TabItem.cs: Fixed UI action handling.
	
2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl trivial things.cs, TabControl.cs, TabItem trivial things.cs, TabItem.cs: Moved the trivial code (CLR properties backing dependency properties, utility methods, etc.) in separate files in an attempt to make TabControl and TabItem easier to work with (the selection handling logic appears to be quite complex).
	
2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: More work.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxItem.cs: Refactored some common code.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: Added handling for some strange cases.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: More work.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBox.cs, ListBoxItem.cs: More work.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Added a disabled partial fix.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: The handler for ItemContainerGenerator.StatusChanged is now added where it is supposed to.

2007-06-27  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxItem.cs: Some work.

2007-06-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Children in autosized rows/columns are now measured first. Star sizing in the measure pass is now computed after each measurement.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBox.cs, ListBoxItem.cs: Added.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Label.cs: Cleaned the code a little.
